--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Gugi' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
+  <!-- Font Awesome Link -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 
   <!--css links-->
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
@@ -83,6 +85,8 @@
 
       <div class="projects-left">
         <h2 class="projects-header">Check out my projects...</h2>
+        <h2 class="projects-header">Fake Header...</h2>
+        <!-- <p>Hover over the thumbnail to see a short description of the project, and reveal a link to the page</p> -->
 
         <div class="revelio-project-one card-container">
           <div class="row">
@@ -94,8 +98,9 @@
                  Users start the quiz in "Get Out", and (if they're successfull) end up in Wakanda!</p>
                 </div>
                 <div class="card-action">
-                  <a class="blue-text" href="#">Node, Express, MongoDB</a>
-                  <a class="blue-text" href="#">MapBox</a>
+                  <a class="blue-text" href="#">Node, Express, MongoDB, MapBox</a>
+                  <a class="blue-text" href="https://github.com/Dereje24/Can-you-get-out"><i class="fab fa-github"></i></a>
+                  <a class="blue-text" href="https://can-you-get-out.herokuapp.com/landing"><i class="far fa-paper-plane"></i></a>
                 </div>
               </div>
             </div>
